# architecture-patterns-python

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.MD  app.sh  config.py  docker-compose.yml  pyproject.toml
adapters/: repository.py
entrypoints/: falcon_app.py
service/: services.py
src/: falcon_app.py  model.py  orm.py  repository.py  services.py  sync.py
src/allocation/adapters/: repository.py
src/allocation/entrypoints/: falcon_app.py
src/tests/: conftest.py
tests/: conftest.py  test_allocate.py  test_baches.py  test_batches.py  test_orm.py  test_repository.py  test_services.py  test_sync.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
