[tool.poetry]
name = "architecture-patterns-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.790"
SQLAlchemy = "^1.3.20"
requests = "^2.25.0"
Flask = "^1.1.2"
psycopg2 = "^2.8.6"
falcon = "^2.0.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
